@@ -12,9 +12,8 @@ public class CustomAccessDeniedHandler implements org.springframework.security.w
     public void handle(HttpServletRequest req, HttpServletResponse res, AccessDeniedException ex) throws IOException {
         res.setStatus(HttpServletResponse.SC_FORBIDDEN); // 403
         res.setContentType("application/json;charset=UTF-8");
-        String body = """
-                {"error":"Forbidden","message":"Insufficient permissions","path":"%s"}
-                """.formatted(req.getRequestURI());
+        String body = String.format("{\"error\":\"Forbidden\",\"message\":\"Insufficient permissions\",\"path\":\"%s\"}", 
+                req.getRequestURI());
         res.getWriter().write(body);
     }
 }
